# joorvajoor

./: README.md  go.mod  go.sum  main.go
scripts/cli/: pyproject.toml
scripts/cli/cli/: __main__.py
web/joorvajoor/: package-lock.json  package.json
web/joorvajoor/pages/: index.tsx
