[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Elahe Dastan <elahe.dstn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-mpv-jsonipc = "^1.1.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
